# Robin

./: .gitignore  CMakeLists.txt  README.md  bun.lockb  package.json  package.xml  pwa-assets.config.ts  setup.cfg  setup.py  showQRcode.ts  vite.config.ts
client/: bun.lockb  package.json  showQRcode.ts
client/src/: App.vue  main.ts
client/src/components/: debugConsole.vue  video.vue
client/src/pages/: controller.vue
fast-image-converter/: Cargo.toml
fast-image-converter/src/: lib.rs
msg/: JpegImage.msg
robin/: client.py  video_publisher.py
robin/video_publisher/: index.py  realsenseTopicStreamTrack.py  runServer.py
src/: App.vue  style.css
src/api/: ros.ts
src/components/: circleButton.vue  debgConsole.vue  debugConsole.vue  modal.vue  stick.vue  topicNameSelector.vue  triggerButton.vue  video.vue
src/utils/: createControllerTopicInterval.ts
