[package]
name = "fast-image-converter"
version = "0.1.0"
authors = ["PyLoT Ampoi"]
description = "fast image converter for RealSense camera"
license = "MIT/Apache-2.0"
repository = "https://github.com/ampoi/pylot-controller"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"